# cmake-clang-cuda-bug-repro

./: CMakeLists.txt  kernel.cu  myclib.i
include/: myclib.h
src/: kernel.cu  kernel.h  myclib.c
